--- a/README
+++ b/README
@@ -32,6 +32,7 @@ List of folders
 	./examples  examples of input data files
 	./src       sources
 	./lib       libraries
+        ./utils     some utility scripts
 
 
 Building and Installation
