--- a/doc/bil.1
+++ b/doc/bil.1
@@ -96,21 +96,38 @@ use the solver defined by \fImethod\fR. Available methods are:
 \fBcrout\fR: CROUT method (default).
 .RE
 .RS
-\fBsuperlu\fR: Sequential SuperLU (if installed).
+\fBsuperlu\fR: Sequential SuperLU (if libsuperlu.so installed).
 .RE
 .RS
-\fBsuperlumt\fIN\fR\fR: Multithreaded SuperLU (if installed) with \fIN\fR number of threads.
+\fBsuperlumt\fIN\fR\fR: Multithreaded SuperLU (if libsuperlu_mt.so installed) with \fIN\fR number of threads.
 .RE
 .RS
-\fBsuperludist\fIN\fR\fR: Distributed SuperLU (if installed) with \fIN\fR number of processes.
+\fBsuperludist\fIN\fR\fR: Distributed SuperLU (if libsuperlu_dist.so installed) with \fIN\fR number of processes.
 .RE
 .RS
-\fBma38\fR: MA38 from HSL (if BLAS library installed).
+\fBma38\fR: MA38 from HSL (if libblas.so installed).
+.RE
+.RS
+\fBpetscksp\fR: Petsc KSP solver (if libpetsc.so installed). Following this option we can specify the KSP method and the preconditioner method through the online commands: \fB-ksp_type <method>\fR and \fB-pc_type <method>\fR (see below).
 .RE
 
 .TP 4
 .B \-ff \fIN\fR
 use the fill factor \fIN\fR for the multi-frontal methods SuperLU (default \fIN\fR=0 meaning that space is allocated internally by SuperLU) or MA38 (default \fIN\fR=2). This option must follow the option \fB-solver\fR \fImethod\fR.
+
+.TP 4
+.B \-ksp_type \fImethod\fR
+use the KSP method \fImethod\fR for the KSP solver (default is gmres). This option must follow the option \fB-solver\fR \fIpetscksp\fR. Available methods are:
+.RS
+\fBrichardson, chebyshev, cg, gmres, tcqmr, bcgs, cgs, tfqmr, cr, lsqr, bicg, preonly ...\fR (see the Petsc documentation for more details at https://petsc.org).
+.RE
+
+.TP 4
+.B \-pc_type \fImethod\fR
+use the preconditoner method \fImethod\fR for the KSP solver (default is ilu for gmres). This option must follow the option \fB-solver\fR \fIpetscksp\fR. Available methods are:
+.RS
+\fBnone, jacobi, sor, ilu, icc ...\fR (see the Petsc documentation for more details at https://petsc.org).
+.RE
 
 .TP 4
 .B \-with \fIinputs\fR
