--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,12 @@
-News in 2.9: A new algorithm is implemented in the module SNIA which
-is based on a sequential non iterative approach (SNIA). The build system is 
-switched to CMake. Bugs fixed in MA38 solver. New way of using extra libraries.
-The number of temporal discrete solutions kept in memory for possible use
-in time discretization schemes can be given in the command line. The solver
-KSP from the Petsc library can be selected if the external library "libpetsc.so"
-was installed (see EXTRALIBS).
-
-News in 2.8: Re-arranging some allocation of memory space for the mesh.
+News in 2.8: Parallelization via OpemMP and MPI.
+A new algorithm is implemented in the module SNIA which is based on a 
+sequential non iterative approach (SNIA). The build system is switched 
+to CMake. Bugs fixed in MA38 solver. New way of using extra libraries. 
+The number of temporal discrete solutions kept in memory for possible use 
+in time discretization schemes can be given in the command line. 
+The solver KSP from the Petsc library can be selected if the external 
+library "libpetsc.so" was installed (see EXTRALIBS). 
+Re-arranging some allocation of memory space for the mesh.
 Reformulation of the jacobian matrix of the transformation between the
 element in the reference frame and that in the current frame. Zero-thickness
 element can be dealt with. Unknowns like pressure/temperature or other can be
